kfreebsd-8 (8.1+dfsg-7) UNRELEASED; urgency=low

  [ Robert Millan ] 
  * Add 917_track_alignment.diff to remove obsolete warning about track
    alignment in MSDOS partitions. Closes: #603380.
  
  [ Petr Salinger ]
  * Add 918_delete_key.diff to conform to Debian Policy,
    9.8 Keyboard configuration. Closes: #605065.

 -- Robert Millan <rmh@debian.org>  Sat, 27 Nov 2010 14:53:56 +0100

kfreebsd-8 (8.1+dfsg-6) unstable; urgency=low

  [ Petr Salinger ]
  * Drop non-free firmware. Closes: #594940.
    - prune .orig.tar.gz
    - disable firmware in kernel via 999_config.diff
    - drop firmware even as modules inside 999_firmware.diff 
  * Re-enable ulpt in kernel. Closes: #598417.
  * Raise NKPT on amd64 via 916_NKPT_amd64.diff. Closes: #596577.
  
  [ Aurelien Jarno ]
  * Replace 106_teken_op.diff by upstream patch.
  * Add 108_teken_utf8_table.diff to be able to display upper case vowels
    with accent by ignoring the accent. Closes: #595681.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 21 Nov 2010 15:19:57 +0100

kfreebsd-8 (8.1-5) unstable; urgency=medium

  * Correctly update a root filesystem to read/write when the mount 
    options are passed as flags instead of iovec, like in busybox.
  * Fix Coda filesystem kernel memory disclosure (CVE-2010-3014).
  * Disable TEKEN_XTERM as TEKEN_UTF8 is enough to get UTF-8 support
    in debian-installer.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 17 Aug 2010 22:05:09 +0200

kfreebsd-8 (8.1-4) unstable; urgency=low

  [ Petr Salinger ]
  * Report i686 instead of i386 on amd64 machine for 32-bit binaries.
  * Teach how to handle orig_pair ESC sequence for TERM=cons25.
    Closes: #559364.    
  * enable VESA also for 64-bit kernel, similarly as for 32-bits
    kernels since 8.0-3

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 07 Aug 2010 16:45:13 +0200

kfreebsd-8 (8.1-3) unstable; urgency=high

  [ Aurelien Jarno ]
  * Backport adaptive_machine_arch support from -CURRENT, change an amd64