@@ -23,3 +23,13 @@
  	{ 0x00df, 0xe1, 0x00 }, { 0x00e0, 0x85, 0x00 },
  	{ 0x00e1, 0xa0, 0x00 }, { 0x00e2, 0x83, 0x00 },
  	{ 0x00e4, 0x84, 0x00 }, { 0x00e5, 0x86, 0x00 },
+@@ -422,7 +422,8 @@
+ 	{ 0x2584, 0xdc, 0x00 }, { 0x2588, 0xdb, 0x00 },
+ 	{ 0x258c, 0xdd, 0x00 }, { 0x2590, 0xde, 0x00 },
+ 	{ 0x2591, 0xb0, 0x02 }, { 0x25a0, 0xfe, 0x00 },
+-	{ 0x25ac, 0x16, 0x00 }, { 0x25b2, 0x1e, 0x00 },
++	{ 0x25ac, 0x16, 0x00 }, 
++	{ 0x25ae, 0xdb, 0x00 }, { 0x25b2, 0x1e, 0x00 },
+ 	{ 0x25ba, 0x10, 0x00 }, { 0x25bc, 0x1f, 0x00 },
+ 	{ 0x25c4, 0x11, 0x00 }, { 0x25cb, 0x09, 0x00 },
+ 	{ 0x25d8, 0x08, 0x00 }, { 0x25d9, 0x0a, 0x00 },
