@@ -7,6 +7,7 @@ kfreebsd-8 (8.1+dfsg-7) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * Add 918_delete_key.diff to conform to Debian Policy,
     9.8 Keyboard configuration. Closes: #605065.
+  * Extend 108_teken_utf8_table.diff for U+25AE. Closes: #605724.
 
  -- Robert Millan <rmh@debian.org>  Sat, 27 Nov 2010 14:53:56 +0100
 
